fix profile image on firefox (add styles on view and comment them on user-profile.scss)

--- a/app/assets/stylesheets/general.scss
+++ b/app/assets/stylesheets/general.scss
@@ -40,10 +40,10 @@
   @media (max-width: 767px) {
     text-align: center;
     a{
-     background: rgba(0,0,0, 0.05);
-     border-bottom: 1px solid rgba(0,0,0, 0.05);
-   }
- }
+      background: rgba(0,0,0, 0.05);
+      border-bottom: 1px solid rgba(0,0,0, 0.05);
+    }
+  }
 }
 .dotted-hide-show  {
   display: none;
@@ -72,7 +72,6 @@
         top: 0;
       }
     }
-
     .home-kid{
       img{ width: 100% }
     }
@@ -80,7 +79,6 @@
       background: image-url('header-bg.png');
       padding-bottom:1em;
     }
-
     p.home-puch-text{
       position: relative;
       display: block;
@@ -130,7 +128,6 @@
 }
 .how-works{
   padding:0 0 6em 0;
-
   figure{
     width: 100%;
     text-align: center;
@@ -211,7 +208,6 @@ html {
   }
 }
 #footer-clear{
-
   margin: 0 auto 70px auto;
 }
 // STICKY FOOTER END
@@ -223,13 +219,11 @@ html {
 .social-btns {display: none;}
 // ALERTS
 .alertOffset {
-
   position: fixed;
   top: 15px;
   right: 15px;
   z-index: 5000;
   opacity: 0.85;
-
 }
 .alert { }
 span.right-text { float: right; }
@@ -244,7 +238,6 @@ span.right-text { float: right; }
   line-height: 25px;
   float: right;
 }
-
 .devise-form{
   width:100%;
   height:100%;
@@ -257,15 +250,13 @@ span.right-text { float: right; }
     text-align: center;
     font-family: 'Roboto Slab', serif;
     padding-bottom: 1em;
-
-
   }
   .well{
     margin-bottom: 1em;
     border:2px solid rgba(0,0,0,0.2);
     border-radius: 6px;
     padding: 4em;
-    // background: rgba(0,0,0,0.7);
+
   }
   input[type=submit]{
     color: #00A058;
@@ -273,16 +264,48 @@ span.right-text { float: right; }
     padding: 0.5em 1.5em;
     font-family: 'Roboto Slab', serif;
     margin-bottom: 1em;
-
   }
   a{
-   color: rgba(255,255,255,0.75);
-   text-decoration: underline;
+    color: rgba(255,255,255,0.75);
+    text-decoration: underline;
+  }
+  input{
+    background: #147449;
+    border:none;
+    color: white;
+    font-weight: 400;
+  }
+}
+.section-error{
+  background:#00BE66;
+  padding:3em 0;
+  h1 {
+    @media screen and (max-width:640px){
+      font-size: 1.8em;
+    }
+  }
+  p{
+    font-size:18px; font-weight:300;
+  }
+
+  figure img{
+    margin-bottom:-4em;
+
+    @media screen and (max-width:640px){
+      margin: 0 auto;
+      width: 100%;
+    }
+  }
+  .btn{
+
+   background:#333;
+   border:2px solid #333;
+   color:#00C062;
+   @media screen and (min-width:640px){
+    font-size:18px;
+   padding:1em 1.5em;
+   }
+
  }
- input{
-  background: #147449;
-  border:none;
-  color: white;
-  font-weight: 400;
 }
-}
+
