--- a/app/assets/stylesheets/user-profile.scss
+++ b/app/assets/stylesheets/user-profile.scss
@@ -134,22 +134,22 @@ body{ background: #EEEEED;}
     padding-top:2em;
   }
 
-  figure img {
-    z-index:100;
-    position:absolute;
-    left:-11px;
-    top:-11px;
-    clip-path:  polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    -ms-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    -moz-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    -webkit-clip-path:  polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
-    clip-path: url(#clip);
-    width:100px;
-    -ms-transform: rotate(-45deg);
-    -webkit-transform: rotate(-45deg);
-    transform: rotate(-45deg);
-    overflow: hidden;
-  }
+  // figure img {
+  //   z-index:100;
+  //   position:absolute;
+  //   left:-11px;
+  //   top:-11px;
+  //   clip-path:  polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  //   -ms-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  //   -moz-clip-path: polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  //   -webkit-clip-path:  polygon(50% 0%, 100% 50%, 50% 100%, 0% 50%);
+  //   clip-path: url(#clip);
+  //   width:100px;
+  //   -ms-transform: rotate(-45deg);
+  //   -webkit-transform: rotate(-45deg);
+  //   transform: rotate(-45deg);
+  //   overflow: hidden;
+  // }
 
   .square  {
     margin-left: 20px;
@@ -288,7 +288,3 @@ body{ background: #EEEEED;}
   }
 
 }
-
-
-
-
